выполнена разметка и стилизация headera

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -2,7 +2,10 @@
 html(lang="ru")
 head
 	meta(charset="UTF-8")
-	title Document
+	title Toxin
+	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 body
-	div.container
+	include components/header/header.pug
+	//- svg.inline-svg-icon
+	//- 	use(xlink:href="img/sprite.svg#search-icon")
 	
