--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,6 @@
-.container {
-	display: flex;
-}
+@import './global/fonts.scss';
+@import './global/normalize.scss';
+@import './global/variables.scss';
+@import './global/global.scss';
+@import './global/mixins.scss';
+@import './components/header/header.scss';
