--- a/src/style/global/fonts.scss
+++ b/src/style/global/fonts.scss
@@ -1,26 +1,26 @@
 @font-face {
   font-family: 'Montserrat'; 
-  src: url("../fonts/Montserrat-Regular.ttf");
-  src: url("../fonts/Montserrat-Regular.woff"); 
-  src: url("../fonts/Montserrat-Regular.svg"); 
+  src: url("../fonts/Montserrat-Regular.ttf") format('truetype');
+  src: url("../fonts/Montserrat-Regular.woff") format('woff'); 
+  // src: url("../fonts/Montserrat-Regular.svg"); 
   font-weight: 400;
   font-style: normal; 
 }
 
 @font-face {
   font-family: 'Montserrat'; 
-  src: url("../fonts/Montserrat-Bold.ttf");
-  src: url("../fonts/Montserrat-Bold.woff"); 
-  src: url("../fonts/Montserrat-Bold.svg"); 
+  src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
+  src: url("../fonts/Montserrat-Bold.woff") format('woff'); 
+  // src: url("../fonts/Montserrat-Bold.svg"); 
   font-weight: 600;
   font-style: normal; 
 }
 
 @font-face {
   font-family: 'Quicksand'; 
-  src: url("../fonts/Quicksand-Bold.ttf");
-  src: url("../fonts/Quicksand-Bold.woff"); 
-  src: url("../fonts/Quicksand-Bold.svg"); 
+  src: url("../fonts/Quicksand-Bold.ttf") format('truetype');
+  src: url("../fonts/Quicksand-Bold.woff") format('woff'); 
+  // src: url("../fonts/Quicksand-Bold.svg"); 
   font-weight: 600;
   font-style: normal; 
 }
