исправлен webpack.config

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
-html(lang="ru")
+html(lang="en")
 head
 	meta(charset="UTF-8")
-	title Toxin
-	<meta name="viewport" content="initial-scale=1.0, width=device-width">
+	title Document
 body
-	include components/header/header.pug
-	//- svg.inline-svg-icon
-	//- 	use(xlink:href="img/sprite.svg#search-icon")
-	
+	h1 ljlkjk
