--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,26 +1,15 @@
-$color: teal;
+@import 'global/normalize.scss';
+@import 'global/fonts.scss';
+@import 'global/mixins.scss';
+@import 'global/global.scss';
+@import 'components/header/header.scss';
 
-h1 {
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-  background-color: $color;
-  color: white;
-  text-align: center;
+/* @import '../plugins/air-datapicker/css/datepicker.css';
+ */
+.visually-hidden {
+	display: none;
 }
 
-
-@font-face {
-  font-family: 'Montserrat'; 
-  src: url("../fonts/Montserrat-Bold.ttf") format('truetype');
-  src: url("../fonts/Montserrat-Bold.woff") format('woff'); 
-  src: url("../fonts/Montserrat-Bold.svg") format('svg'); 
-  font-weight: 600;
-  font-style: normal; 
-}
-
-h1 {
-	font-family: 'Montserrat', sans-serif;
-	font-weight: 600;
-	font-size: 20px; 
+.main-page {
+	background: red;
 }
