сделан слайдер на главной странице

--- a/src/pages/components/main-page/main-page.pug
+++ b/src/pages/components/main-page/main-page.pug
@@ -1,6 +1,6 @@
 main.main-page
 	div.slide-first
-	div.slider-second
+	div.slide-second
 	div.slide-third
 	section.room-search.main-page__room-search
 		h2.room-search__title Найдём номера под ваши пожелания
