--- a/src/sass/components/footer/footer.scss
+++ b/src/sass/components/footer/footer.scss
@@ -1,26 +1,200 @@
 .footer {
-	padding: 7.2% 9.7%;
-	box-sizing: border-box;
 
-	border: 1px solid red;
+	&__column--top {
+		padding: 5%;
+
+		@media (min-width: 500px) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+
+		@media (min-width: 800px) {
+			padding-left: 9.7%;
+			padding-right: 9.7%;
+		}
+
+		@media (min-width: 1440px) {
+			margin-top: 2%;
+			justify-content: flex-start;
+		}
+	}
+
+	&__column--bottom {
+		padding: 1.6em 5%;
+		border-top: 1px solid rgba(31, 32, 65, 0.25);
+
+		@media (min-width: 500px) {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		@media (min-width: 800px) {
+			padding-left: 9.7%;
+			padding-right: 9.7%;
+			margin-top: 23px;
+		}
+	}
 }
 
 .general-info {
-	width: 260px;
+	text-align: center;
 
-	border: 1px solid green;
+	&__text {
+		margin-top: 10px;
+  	line-height: 22px;
+	}
+
+	@media (min-width: 500px) {
+		text-align: left;
+	}
+
+	@media (min-width: 1000px) {
+		max-width: 260px;
+	}
+
+	@media (min-width: 1600px) {
+		max-width: 320px;
+	}
+}
+
+.footer__nav {
+	@media (min-width: 500px) {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		flex-grow: 0.5;
+
+		& .nav__item {
+			display: block;
+		}
+	}
+
+	@media (min-width: 1000px) {
+		& .nav__item {
+			margin-top: 12px; 
+		}
+	}
+
+	@media (min-width: 1440px) {
+		margin-left: 3.5%;
+		margin-top: 3px;
+		justify-content: flex-start;
+	}
+}
+
+@media (min-width: 1440px) {
+	.nav__list--navigation {
+		margin-right: 39px;
+	}
+
+	.nav__list--about-us {
+		margin-right: 77px;
+	}
 }
 
 .nav__title {
-	font-family: "Montserrat", sans-serif;
-	font-size: 12px;
-	line-height: 15px;
-	font-weight: 600;
-	/* identical to box height */
+	margin-top: 20px; 
+	text-align: center;
 
-	text-transform: uppercase;
+	@media (min-width: 500px) {
+		text-align: left;
+	}
 
-	/* Dark 100% */
+	@media (min-width: 1440px) {
+		margin-top: 0;
+		margin-bottom: 16px;
+	}
+}
 
-	color: #1F2041;
+.subscribe {
+	margin-top: 20px;
+	text-align: center;
+
+	&__text {
+		margin-top: 15px;
+	}
+
+	&__input {
+		width: 260px;
+		margin-top: 20px;
+	}
+
+	@media (min-width: 500px) {
+		text-align: left;
+	}
+
+	@media (min-width: 1440px) {
+    margin-left: 50px;
+		margin-top: 3px;
+	}
+} 
+
+.subscribe__input--submit {
+	display: none;
+}
+
+@media (min-width: 1600px) {
+	.footer__nav {
+		display: flex;
+		justify-content: space-around;
+		margin-left: auto;
+	}
+}
+
+.copyright {
+	text-align: center;
+	color: rgba(31, 32, 65, 0.75);
+
+	@media (min-width: 500px) {
+		text-align: left;
+	}
+}
+
+.social {
+	display: flex;
+	max-width: 150px;
+	margin: 0 auto; 
+	position: relative;
+
+	@media (min-width: 500px) {
+		margin: 0;
+		max-width: auto;
+	}
+}
+
+.social-btn {
+	display: block;
+	width: 24px;
+	height: 24px;
+	margin-left: 20px;
+}
+
+.social-btn::before {
+	content: "";
+	display: block;
+	position: absolute;
+	width: 24px;
+	height: 24px;
+}
+
+.social-btn--twitter::before {
+	content: "";
+	
+	background: url("../images/sprite.png") no-repeat;
+	background-position: -4px -393px;
+}
+
+.social-btn--facebook::before {
+	content: "";
+	
+	background: url("../images/sprite.png") no-repeat;
+	background-position: -4px -102px;
+}
+
+.social-btn--instagramm::before {
+	content: "";
+	
+	background: url("../images/sprite.png") no-repeat;
+	background-position: -4px -220px;
 }
