--- a/src/sass/components/main-page/main-page.scss
+++ b/src/sass/components/main-page/main-page.scss
@@ -1,89 +1,104 @@
 .main-page {
 	position: relative;
+	padding-top: 4.86%;
+	padding-bottom: 26.8%;
+	padding-left: 9.7%;
+	
 	background: url('../images/slide-1.jpg') no-repeat;
 	background-size: cover;
-
-	background-position: 0 -70px;
+	background-position: 0 0px;
 	border-top: 1px solid #ffffff;
 	border-bottom: 1px solid #ffffff;
+
+	@media (max-width: 800px) {
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+
+	@media (max-width: 500px) {
+		padding-left: 2.5%;
+		padding-right: 2.5%;
+	}
+
+	@media(min-width: 1440px) {
+		background-position: 0 -70px;
+	}
+
+	&__slogan {
+		position: absolute;
+		right: 9.5%;
+  	bottom: 20px;
+	}
 }
 
-.main-page > .slide-first,
-.main-page > .slide-second,
-.main-page > .slide-third {
-  width: 100%;
-  height: 100%;
-  position:absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  opacity: 0;
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
+.slogan {
+	@include general-fonts();
+  z-index: 5;
+  text-align: right;
 }
 
-.slide-first {
-	background-image: url('../images/slide-1.jpg');
-}
+// .main-page > .slide-first,
+// .main-page > .slide-second,
+// .main-page > .slide-third {
+//   width: 100%;
+//   height: 100%;
+//   position:absolute;
+//   left: 0;
+//   right: 0;
+//   top: 0;
+//   opacity: 0;
+//   background-size: cover;
+//   background-position: center center;
+//   background-repeat: no-repeat;
+// }
 
-.slide-second {
-	background-image: url('../images/slide-2.jpg');
-}
+// .slide-first {
+// 	background-image: url('../images/slide-1.jpg');
+// }
 
-.slide-third {
-	background-image: url('../images/slide-3.jpg');
-}
+// .slide-second {
+// 	background-image: url('../images/slide-2.jpg');
+// }
 
-.main-page > .slide-first {
-	-webkit-animation: slide1 30s;
-	-webkit-animation-iteration-count: infinite;
-}
-.main-page > .slide-second {
-	-webkit-animation: slide2 30s;
-	-webkit-animation-iteration-count: infinite;
-}
-.main-page > .slide-third {
-	-webkit-animation: slide3 30s;
-	-webkit-animation-iteration-count: infinite;
-}
+// .slide-third {
+// 	background-image: url('../images/slide-3.jpg');
+// }
 
-@-webkit-keyframes slide1 {
-	0% {opacity: 1;}
-	2.5% {opacity: 1;}
-	22.5% {opacity: 1;}
-	35% {opacity: 0}
-	95% {opacity: 0;}
-	100% {opacity: 1;}
-}
+// .main-page > .slide-first {
+// 	-webkit-animation: slide1 30s;
+// 	-webkit-animation-iteration-count: infinite;
+// }
+// .main-page > .slide-second {
+// 	-webkit-animation: slide2 30s;
+// 	-webkit-animation-iteration-count: infinite;
+// }
+// .main-page > .slide-third {
+// 	-webkit-animation: slide3 30s;
+// 	-webkit-animation-iteration-count: infinite;
+// }
 
-@-webkit-keyframes slide2 {
-	22.5% {opacity: 0;}
-	35% {opacity: 1;}
-	37.5% {opacity: 1;}
-	57.5% {opacity: 1;}
-	60% {opacity: 0;}
-}
+// @-webkit-keyframes slide1 {
+// 	0% {opacity: 1;}
+// 	2.5% {opacity: 1;}
+// 	33.5% {opacity: 1;}
+// 	35% {opacity: 0}
+// 	95% {opacity: 0;}
+// 	100% {opacity: 1;}
+// }
 
-@-webkit-keyframes slide3 {
-	0% {opacity: 0;}
-	57.5% {opacity: 0;}
-	60% {opacity: 1;}
-	77.5% {opacity: 1;}
-	97.5% {opacity: 1;}
-	100% {opacity: 0;}
-}
+// @-webkit-keyframes slide2 {
+// 	33.5% {opacity: 0;}
+// 	35% {opacity: 1;}
+// 	37.5% {opacity: 1;}
+// 	57.5% {opacity: 1;}
+// 	60% {opacity: 0;}
+// }
 
-.room-search {
-	width: 380px;
-	height: 374px;
-
-	background: white;
-	box-sizing: border-box;
-
-	margin-top: 4.86%;
-	margin-bottom: 26.8%;
-	margin-left: 9.7%;
-
-	position: relative;
-}
+// @-webkit-keyframes slide3 {
+// 	0% {opacity: 0;}
+// 	57.5% {opacity: 0;}
+// 	60% {opacity: 1;}
+// 	77.5% {opacity: 1;}
+// 	97.5% {opacity: 1;}
+// 	100% {opacity: 0;}
+// }
