--- a/src/sass/global/global.scss
+++ b/src/sass/global/global.scss
@@ -1,4 +1,3 @@
-// общие стили
 * {
 	margin: 0;
 	padding: 0;
@@ -24,6 +23,9 @@ body {
 	min-width: 320px;
 	max-width: 1920px;
 	margin: 0 auto;
+
+	// width: 1440px;
+	// border: 1px solid red;
 }
 
 .wrapper {
@@ -70,7 +72,7 @@ input {
 }
 
 input::placeholder {
-	color: rgba(31, 32, 65, 0.25);
+	color: rgba(31, 32, 65, 0.75);
 }
 
 input:hover,
@@ -96,7 +98,6 @@ input[type="radio"] {
 
 input[type="checkbox"]:checked + label:before {
   border: 1px solid $purple;
-  // добавляется элемент из спрайта
 }
 
 input[type="radio"] {
