--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,16 +6,8 @@
 @import 'components/main-page/main-page.scss';
 @import 'components/main-page/search-room.scss';
 @import 'components/footer/footer.scss';
-
-/* @import '../plugins/air-datapicker/css/datepicker.css';
- */
+@import '../plugins/air-datapicker/css/datepicker.css';
+ 
 .visually-hidden {
 	display: none;
-}
-
-.inline-svg-icon {
-	border: 1px solid black;
-	width: 20px;
-	height: 20px;
-	background: gray;
 }
