сделан слайдер для всех каточек

--- a/src/sass/components/header/header.scss
+++ b/src/sass/components/header/header.scss
@@ -8,6 +8,7 @@
 	padding-top: 0.928em;
 
 	justify-content: space-between;
+	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
 	&__logo {
 		width: 140px;
