--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,6 +7,9 @@
 @import 'components/main-page/search-room.scss';
 @import 'components/footer/footer.scss';
 @import '../plugins/air-datapicker/css/datepicker.css';
+@import 'components/catalog/catalog-wrapper.scss';
+@import 'components/catalog/sidebar.scss';
+@import 'components/catalog/catalog.scss';
  
 .visually-hidden {
 	display: none;
