--- a/src/sass/components/catalog/catalog-wrapper.scss
+++ b/src/sass/components/catalog/catalog-wrapper.scss
@@ -5,5 +5,7 @@
 
   justify-content: space-between;
 
-  border: 1px solid black;
+  // @media(min-width: 400px) {
+  // 	flex-wrap: wrap;
+  // }
 }
