--- a/src/sass/components/catalog/catalog.scss
+++ b/src/sass/components/catalog/catalog.scss
@@ -1,5 +1,5 @@
 .catalog {
-  width: 71.9%;
+  width: 72.5%;
 // временно
   border: 1px solid green;
 
@@ -11,7 +11,12 @@
   &__title {
     margin-top: 0;
     margin-bottom: 10px;
+    margin-left: 12px;
     letter-spacing: 0.2px;
+  }
+
+  @media (min-width: 1600px) {
+    width: 75%;
   }
 }
 
@@ -20,15 +25,11 @@
   max-width: 270px;
  
   margin: 9.5px 0;
-  margin-right: 12px;
+  margin-left: 12px;
 
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   border-radius: 4px;
   cursor: pointer;
-
-  &:nth-child(3n+3) {
-    margin-right: 0;
-  }
 
   &:hover .card-slide::before {
     content: '';
@@ -68,6 +69,10 @@
   &:hover .card-slide__btn--next,
   &:hover .card-slide__btn--prev {
     display: block;
+  }
+
+  @media(min-width: 1600px) {
+    margin-left: 20px;
   }
 }
 
