--- a/src/sass/components/header/header.scss
+++ b/src/sass/components/header/header.scss
@@ -1,159 +1,334 @@
 .header {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
+	padding: 9px 9.7%;
 	box-sizing: border-box;
-	font-size: 1rem;
-	padding: 0 9.7%;
-	padding-top: 0.928em;
-
-	justify-content: space-between;
 	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
+	padding-bottom: 15px; // 15
+
 	&__logo {
-		width: 140px;
-		margin-bottom: 0.92em;
+		margin-right: 30px;
+		    margin-top: 5px;
 	}
 
 	&__nav {
-		margin-left: auto;
-		margin-bottom: 0.92em;;
+		// width: 865px;
 	}
 
-	&__user-block {
-		margin-left: 0;
-		margin-bottom: 0.92em; 
-	}
-
-	@media(max-width: 1100px) {
+	@media (min-width: 900px) {
 		&__nav {
-			margin-left: 0;
+			display: flex;
+			align-content: center;
+			align-items: center;
 		}
 	}
 
-	@media(max-width: 800px) {
-		padding-left: 5%;
-		padding-right: 5%;
-	}
-
-	@media(max-width: 500px) { 
-		display: block;
-
-		&__logo {
-			display: block;
-			width: 155px;
-			margin: 0 auto;
-		}
+	@media (min-width: 1100px) {
+		display: flex;
+		align-items: center;
+		align-content: center;
+		flex-wrap: wrap;
+		padding-bottom: 8px; // 15
 
 		&__nav {
-			margin-left: 0;
+			margin-left: auto;
 		}
 	}
 }
 
-.nav {
-	&__item {
-		display: inline-block;
-		margin-right: 1.21em;
+.header__nav {
+	& .nav__item {
+		margin-right: 20px;
 	}
 
-	&__item--have-sublists {
-		margin-right: 2.85em;
+	& .nav__item--have-sublists {
+		margin-right: 40px;
 	}
 
-	&__item--have-sublists .nav__link {
+	& .nav__link {
 		position: relative;
 	}
 
-	&__item--have-sublists .nav__link::after {
+	& .nav__item--have-sublists .nav__link::before {
 		content: "";
 		display: block;
 		width: 20px;
 		height: 20px;
 		position: absolute;
-		top: 1px;
-		right: -20px;
-
+		top: 0;
+		right: -23px;
 		background: url('../images/sprite.png') no-repeat;
-    background-position: -1px -314px;
-		cursor: pointer;
+		background-position: 0 -314px;
 	}
 
-	&__item--have-sublists .nav__link:hover::after {
-		content: "";
-    background-position: -1px -297px;
-	}
-
-	@media(max-width: 500px) {
-		&__item {
-			display: block;
-			text-align: center;
-			margin: 10px 0;
+	@media (min-width: 1440px) {
+		& .nav__item {
+			margin-right: 29px;
 		}
+
+		& .nav__item--have-sublists {
+			margin-right: 40px;
+		}
+	}
+}
+
+.nav {
+	margin: 0;
+	margin-bottom: 10px;
+	padding: 0;
+	list-style: none;
+	margin-left: 5px;
+
+	@media (min-width: 500px) {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	@media (min-width: 900px) {
+		margin-bottom: 0;
+	}
+
+	@media (min-width: 1100px) { 
+		margin-left: auto;
+	}
+
+	&__link {
+		color: rgba(31, 32, 65, 0.5);
+		text-decoration: none;
 	}
 }
 
 .user-block {
-	&__link {
-		display: inline-block;
-		text-align: center;
-		margin-left: 20px;
-		padding: 10px 21px;
-		border-radius: 22px;
-	}
+	margin: 0;
+	padding: 0;
+	list-style: none;
 
-	&__link:nth-child(1) {
-		margin-left: 0;
-	}
-
-	&__link--login {
-		@include style-button-theme-transparent();
-		padding: 8px 19px;
-		border-radius: 22px;
-	}
-
-	&__link--authorized-user {
-		position: relative;
-		padding: 0;
-		padding-left: 15px;
-	}
-
-	&__link--authorized-user::before {
-    content: "";
-    position: absolute;
-    width: 10px;
-    height: 23px;
-    left: 0;
-    top: -3px;
-    border-left: 1px solid rgba(31, 32, 65, 0.1);
-	}
-
-	@media(max-width: 500px) {
-		&__link {
-			display: block;
-			max-width: 250px;
-			text-align: center;
-			margin: 0 auto;
-
-			margin-top: 10px;
-		}
-
-		&__link:nth-child(1) {
-			margin-left: auto;
-		}
-
-		&__link--authorized-user {
-			margin-top: 25px;
-	    margin-bottom: 25px;
-		}
-
-		&__link--authorized-user::before {
-	    content: "";
-	    position: absolute;
-	    width: 100%;
-	    height: 2px;
-	    top: -6px;
-	    border-top: 1px solid rgba(31, 32, 65, 0.1);
-		}
+	@media (min-width: 900px) {
+		margin-left: auto;
 	}
 }
+
+.login {
+	display: inline-block;
+	font-family: $general-fonts, sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 15px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #BC9CFF;
+
+	padding: 8px 18px;
+	border: 2px solid #BC9CFF;
+	border-radius: 22px;
+	
+	margin-right: 20px;
+	margin-bottom: 4px;
+}
+
+.register {
+	display: inline-block;
+	font-family: $general-fonts, sans-serif;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 12px;
+	line-height: 15px;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #FFFFFF;
+	padding: 10px 20px;
+	background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+	border-radius: 22px;
+}
+
+.nav__link--active {
+  font-weight: 600;
+  color: rgba(31, 32, 65, 0.75);
+}
+
+.authorized-user {
+	margin-left: 38px;
+	font-family: $general-fonts, sans-serif;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 17px;
+	text-decoration: none;
+
+	color: rgba(31, 32, 65, 0.5);
+
+	position: relative;
+}
+
+.authorized-user::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 31px;
+  top: -8px;
+  left: -32px;
+  position: absolute;
+	background: rgba(31, 32, 65, 0.1);
+}
+
+// сделать чтобы кнопки были в процнтном соотношении
+
+// .header {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	align-items: center;
+// 	box-sizing: border-box;
+// 	font-size: 1rem;
+// 	padding: 0 9.7%;
+// 	padding-top: 0.928em;
+
+// 	justify-content: space-between;
+// 	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+// 	&__logo {
+// 		width: 140px;
+// 		margin-bottom: 0.92em;
+// 	}
+
+// 	&__nav {
+// 		margin-left: auto;
+// 		margin-bottom: 0.92em;;
+// 	}
+
+// 	&__user-block {
+// 		margin-left: 0;
+// 		margin-bottom: 0.92em; 
+// 	}
+
+// 	@media(max-width: 1100px) {
+// 		&__nav {
+// 			margin-left: 0;
+// 		}
+// 	}
+
+// 	@media(max-width: 800px) {
+// 		padding-left: 5%;
+// 		padding-right: 5%;
+// 	}
+
+// 	@media(max-width: 500px) { 
+// 		display: block;
+
+// 		&__logo {
+// 			display: block;
+// 			width: 155px;
+// 			margin: 0 auto;
+// 		}
+
+// 		&__nav {
+// 			margin-left: 0;
+// 		}
+// 	}
+// }
+
+// .nav {
+// 	&__item {
+// 		display: inline-block;
+// 		margin-right: 1.21em;
+// 	}
+
+// 	&__item--have-sublists {
+// 		margin-right: 2.85em;
+// 	}
+
+// 	&__item--have-sublists .nav__link {
+// 		position: relative;
+// 	}
+
+// 	&__item--have-sublists .nav__link::after {
+// 		content: "";
+// 		display: block;
+// 		width: 20px;
+// 		height: 20px;
+// 		position: absolute;
+// 		top: 1px;
+// 		right: -20px;
+
+// 		background: url('../images/sprite.png') no-repeat;
+//     background-position: -1px -314px;
+// 		cursor: pointer;
+// 	}
+
+// 	&__item--have-sublists .nav__link:hover::after {
+// 		content: "";
+//     background-position: -1px -297px;
+// 	}
+
+// 	@media(max-width: 500px) {
+// 		&__item {
+// 			display: block;
+// 			text-align: center;
+// 			margin: 10px 0;
+// 		}
+// 	}
+// }
+
+// .user-block {
+// 	&__link {
+// 		display: inline-block;
+// 		text-align: center;
+// 		margin-left: 20px;
+// 		padding: 10px 21px;
+// 		border-radius: 22px;
+// 	}
+
+// 	&__link:nth-child(1) {
+// 		margin-left: 0;
+// 	}
+
+// 	&__link--login {
+// 		@include style-button-theme-transparent();
+// 		padding: 8px 19px;
+// 		border-radius: 22px;
+// 	}
+
+// 	&__link--authorized-user {
+// 		position: relative;
+// 		padding: 0;
+// 		padding-left: 15px;
+// 	}
+
+// 	&__link--authorized-user::before {
+//     content: "";
+//     position: absolute;
+//     width: 10px;
+//     height: 23px;
+//     left: 0;
+//     top: -3px;
+//     border-left: 1px solid rgba(31, 32, 65, 0.1);
+// 	}
+
+// 	@media(max-width: 500px) {
+// 		&__link {
+// 			display: block;
+// 			max-width: 250px;
+// 			text-align: center;
+// 			margin: 0 auto;
+
+// 			margin-top: 10px;
+// 		}
+
+// 		&__link:nth-child(1) {
+// 			margin-left: auto;
+// 		}
+
+// 		&__link--authorized-user {
+// 			margin-top: 25px;
+// 	    margin-bottom: 25px;
+// 		}
+
+// 		&__link--authorized-user::before {
+// 	    content: "";
+// 	    position: absolute;
+// 	    width: 100%;
+// 	    height: 2px;
+// 	    top: -6px;
+// 	    border-top: 1px solid rgba(31, 32, 65, 0.1);
+// 		}
+// 	}
+// }
