--- a/src/sass/global/global.scss
+++ b/src/sass/global/global.scss
@@ -7,9 +7,9 @@ html {
 	@include general-fonts();
 	font-size: 14px;
 
-	@media (min-width: 1600px) {
-		font-size: 16px;
-	}
+	// @media (min-width: 1600px) {
+	// 	font-size: 16px;
+	// }
 }
 
 html,
@@ -23,27 +23,24 @@ body {
 	min-width: 320px;
 	max-width: 1920px;
 	margin: 0 auto;
-
-	// width: 1440px;
-	// border: 1px solid red;
 }
 
-.wrapper {
-	display: table;
-	width: 100%;
-	height: 100%;
-}
+// .wrapper {
+// 	display: table;
+// 	width: 100%;
+// 	height: 100%;
+// }
 
-.content {
-	display: table-row;
-	height: 100%;
-}
+// .content {
+// 	display: table-row;
+// 	height: 100%;
+// }
 
-ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
+// ul {
+// 	margin: 0;
+// 	padding: 0;
+// 	list-style: none;
+// }
 
 a {
 	@include fonts-for-navigation();
@@ -82,31 +79,41 @@ input:focus {
 	border: 1px solid $gray-50;
 }
 
-input[type="checkbox"],
-input[type="radio"] {
-	display: none;
-}
+// input[type="checkbox"],
+// input[type="radio"] {
+// 	display: none;
+// }
 
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
-	@include style-for-checkbox();
-}
+// input[type="checkbox"] + label:before,
+// input[type="radio"] + label:before {
+// 	@include style-for-checkbox();
+// }
 
-input[type="radio"] {
-	border-radius: 0.71em;
-}
+// input[type="radio"] {
+// 	border-radius: 0.71em;
+// }
 
-input[type="checkbox"]:checked + label:before {
-  border: 1px solid $purple;
-}
+// input[type="checkbox"]:checked + label:before {
+//   border: 1px solid $purple;
+//   background: url('../images/sprite.png') no-repeat;
+//   background-position: -1px -2px;
+// }
 
-input[type="radio"] {
-	border: 1px solid $purple;
-}
+// @media (min-width: 1600px) {
+// 	input[type="checkbox"]:checked + label:before {
+// 	  border: 1px solid $purple;
+// 	  background: url('../images/sprite.png') no-repeat;
+// 	  background-position: 0 -1px;
+// 	}
+// }
 
-input[type="checkbox"] + label {
-	@include fonts-for-label-checkbox();
-}
+// input[type="radio"] {
+// 	border: 1px solid $purple;
+// }
+
+// input[type="checkbox"] + label {
+// 	@include fonts-for-label-checkbox();
+// }
 
 .btn {
 	@include fonts-for-button();
@@ -115,4 +122,58 @@ input[type="checkbox"] + label {
 
 .btn:active {
 	opacity: 0.5;
+}
+
+.login {
+	@include style-button-theme-transparent();
+	box-sizing: border-box
+}
+
+// input
+// label
+input[type="radio"] {
+	display: none;
+}
+
+input[type="radio"] + label {
+	position: relative;
+	padding: 0 0 0 25px;
+	cursor: pointer;
+}
+
+input[type="radio"] + label:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20px;
+	height: 20px;
+	border: 1px solid rgba(31, 32, 65, 0.25);
+	border-radius: 50%;
+	background: #FFF;
+}
+
+input[type="radio"] + label:after {
+	content: '';
+	position: absolute;
+	top: 5px;
+	left: 5px;
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+	opacity: 0;
+	transition: .2s;
+}
+
+input[type="radio"]:checked + label:after {
+	opacity: 1;
+}
+
+input[type="radio"]:checked + label {
+	color: rgba(31, 32, 65, 0.75);	
+}
+
+input[type="radio"]:focus + label:before {
+	box-shadow: 0 0 0 3px rgba(255,255,0,.7);
 }
