--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,14 +2,14 @@
 @import 'global/fonts.scss';
 @import 'global/mixins.scss';
 @import 'global/global.scss';
-@import 'components/header/header.scss';
-@import 'components/main-page/main-page.scss';
-@import 'components/main-page/search-room.scss';
-@import 'components/footer/footer.scss';
-@import '../plugins/air-datapicker/css/datepicker.css';
-@import 'components/catalog/catalog-wrapper.scss';
-@import 'components/catalog/sidebar.scss';
-@import 'components/catalog/catalog.scss';
+// @import 'components/header/header.scss';
+// @import 'components/main-page/main-page.scss';
+// @import 'components/main-page/search-room.scss';
+// @import 'components/footer/footer.scss';
+// @import '../plugins/air-datapicker/css/datepicker.css';
+// @import 'components/catalog/catalog-wrapper.scss';
+// @import 'components/catalog/sidebar.scss';
+// @import 'components/catalog/catalog.scss';
  
 .visually-hidden {
 	display: none;
