выполнен блок входа в систему

--- a/src/ui-kit/page-1.pug
+++ b/src/ui-kit/page-1.pug
@@ -4,4 +4,6 @@ head
 	meta(charset="UTF-8")
 	title Document
 body
-	include ../components/registration/registration.pug
+	//- include ../components/registration/registration.pug
+	//- include ../components/login/login.pug
+	include ../components/dropdown/dropdown.pug
