--- a/src/ui-kit/style.scss
+++ b/src/ui-kit/style.scss
@@ -1,2 +1,3 @@
-// @import 'page-1/date-picker/date-picker.scss';
 @import '../components/registration/registration.scss';
+@import '../components/login/login.scss';
+@import '../components/dropdown/dropdown.scss';
