--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,2 +1,48 @@
-div.dropdown
-	input.dropdown__input(placeholder="сколько гостей")
+div.dropdown(id="dropdown")
+	div.dropdown__input-wrapper
+		input.dropdown__input(type="text" value="2 спальни, 2 кровати..." readonly)
+		span.dropdown__toggle
+	div.counter.dropdown__counter.visually-hidden
+		div.counter__row
+			span.counter__row-name Спальни
+			div.counter__inner
+				span.counter__btn.counter__btn--minus -
+				span.counter__row-quantity 2
+				span.counter__btn.counter__btn--plus + 
+		div.counter__row
+			span.counter__row-name Кровати
+			div.counter__inner
+				span.counter__btn.counter__btn--minus -
+				span.counter__row-quantity 2
+				span.counter__btn.counter__btn--plus + 
+		div.counter__row
+			span.counter__row-name Ванные комнаты
+			div.counter__inner
+				span.counter__btn.counter__btn--minus.disabled -
+				span.counter__row-quantity 0
+				span.counter__btn.counter__btn--plus + 
+
+//- div.dropdown(id="dropdowns")
+//- 	div.dropdown__input-wrapper
+//- 		input.dropdown__input(type="text" value="2 спальни, 2 кровати..." readonly)
+//- 		span.dropdown__toggle
+//- 	div.counter.dropdown__counter
+//- 		//- потом оставить только одну строку т к js отрисует
+//- 		div.counter__row
+//- 			span.counter__row-name Спальни
+//- 			div.counter__inner
+//- 				span.counter__btn.counter__btn--minus -
+//- 				span.counter__row-quantity 2
+//- 				span.counter__btn.counter__btn--plus + 
+//- 		div.counter__row
+//- 			span.counter__row-name Кровати
+//- 			div.counter__inner
+//- 				span.counter__btn.counter__btn--minus -
+//- 				span.counter__row-quantity 2
+//- 				span.counter__btn.counter__btn--plus + 
+//- 		div.counter__row
+//- 			span.counter__row-name Ванные комнаты
+//- 			div.counter__inner
+//- 				span.counter__btn.counter__btn--minus.disabled -
+//- 				span.counter__row-quantity 0
+//- 				span.counter__btn.counter__btn--plus + 
