--- a/src/ui-kit/page-1.pug
+++ b/src/ui-kit/page-1.pug
@@ -6,4 +6,8 @@ head
 body
 	//- include ../components/registration/registration.pug
 	//- include ../components/login/login.pug
-	include ../components/dropdown/dropdown.pug
+	//- include ../components/dropdown/dropdown-convenience/dropdown.pug
+	//- include ../components/dropdown/dropdown-guests/dropdown.pug
+
+	include ../components/date-picker/date-picker.pug
+	//- include ../components/order-card/order-card.pug
