--- a/src/ui-kit/style.scss
+++ b/src/ui-kit/style.scss
@@ -1,3 +1,6 @@
 @import '../components/registration/registration.scss';
 @import '../components/login/login.scss';
 @import '../components/dropdown/dropdown.scss';
+@import '../components/order-card/order-card.scss';
+
+@import '../components/date-picker/date-picker.scss';
