--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -1,175 +1,181 @@
 @import './plugins/air-datapicker/scss/datepicker.css';
-// 
-.date-picker {
-  border: 1px solid red;
-  display: inline-block;
-  margin-left: 200px;
-  margin-top: 100px; 
-}
-//
 
+  .datepicker {
+    margin-top: 6px;
+    margin-left: 0px;
+    padding-top: 13px;
+    padding-bottom: 10px;
+  }
 
-.hidd {
-  visibility: hidden;
-  height: 1px;
-} 
+  .date-picker__label {
+    position: relative;
+  }
 
-.datepicker {
-  margin-top: 6px;
-  margin-left: 0px;
-  padding-top: 13px;
-  padding-bottom: 10px;
-}
+  .date-picker__input {
+    margin-top: 6px;
+  }
 
-.datepicker--content {
-  padding: 0;
-}
+  .date-picker__label::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    background: url('./images/sprite.png') no-repeat;
+    background-position: -2px -314px
+  }
 
-.datepickers-container {
-  margin-top: -10px;
-}
+  .datepicker--content {
+    padding: 0;
+  }
 
-.datepicker--cell {
-  color: rgba(31, 32, 65, 0.5);
-}
+  .datepickers-container {
+    margin-top: -10px;
+  }
 
-.datepicker--cell.datepicker--cell-day.-range-from-.-selected- {
-  background: rgba(224, 209, 255, 0.5);
-  border-radius: 50% 0% 0% 50%; 
-}
+  .datepicker--cell {
+    color: rgba(31, 32, 65, 0.5);
+  }
 
-.datepicker--cell.datepicker--cell-day.-range-from-.-selected-::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 38px;
-  height: 38px;
-  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  z-index: -1;
-  border-radius: 100%;
-}
+  .datepicker--cell.datepicker--cell-day.-range-from-.-selected- {
+    background: rgba(224, 209, 255, 0.5);
+    border-radius: 50% 0% 0% 50%; 
+  }
 
-.datepicker--cell.datepicker--cell-day.-in-range- {
-  background: rgba(224, 209, 255, 0.5);
-}
+  .datepicker--cell.datepicker--cell-day.-range-from-.-selected-::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 38px;
+    height: 38px;
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    z-index: -1;
+    border-radius: 100%;
+  }
 
-.datepicker--cell.datepicker--cell-day.-range-to-.-selected- {
-  background: rgba(224, 209, 255, 0.5);
-  border-radius: 0% 50% 50% 0%; 
-}
+  .datepicker--cell.datepicker--cell-day.-in-range- {
+    background: rgba(224, 209, 255, 0.5);
+  }
 
-.datepicker--cell.datepicker--cell-day.-range-to-.-selected-::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 38px;
-  height: 38px;
-  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  z-index: -1;
-  border-radius: 100%;
-}
+  .datepicker--cell.datepicker--cell-day.-range-to-.-selected- {
+    background: rgba(224, 209, 255, 0.5);
+    border-radius: 0% 50% 50% 0%; 
+  }
 
-.datepicker--buttons {
-  padding: 0;
-  border-top: none;
-}
+  .datepicker--cell.datepicker--cell-day.-range-to-.-selected-::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 38px;
+    height: 38px;
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    z-index: -1;
+    border-radius: 100%;
+  }
 
-.datepicker--button {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
+  .datepicker--buttons {
+    padding: 0;
+    border-top: none;
+  }
 
-  color: rgba(31, 32, 65, 0.5);
-}
+  .datepicker--button {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
 
-.datepicker--button--use {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: #BC9CFF;
-  cursor:pointer;
-}
+    color: rgba(31, 32, 65, 0.5);
+  }
 
-.datepicker--button--use:hover {
-  color: #9a6bff;
-}
+  .datepicker--button--use {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #BC9CFF;
+    cursor:pointer;
+  }
 
-.datepicker--buttons {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 10px;
-}
+  .datepicker--button--use:hover {
+    color: #9a6bff;
+  }
 
-.datepicker--button:hover {
-  background: none;
-  cursor: pointer;
-}
+  .datepicker--buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 10px;
+  }
 
-.datepicker--pointer {
-  display: none;
-}
+  .datepicker--button:hover {
+    background: none;
+    cursor: pointer;
+  }
 
-.datepicker--days-names {
-  margin-top: 33px;
-}
+  .datepicker--pointer {
+    display: none;
+  }
 
-.datepicker--cell.datepicker--cell-day {
-  margin-top: 10px;
-  margin-bottom: -8px;
-  height: 38px;
-}
+  .datepicker--days-names {
+    margin-top: 33px;
+  }
 
-.datepicker--buttons {
-  padding: 0;
-  padding-top: 30px;
-  padding-bottom: 8px;
-}
+  .datepicker--cell.datepicker--cell-day {
+    margin-top: 10px;
+    margin-bottom: -8px;
+    height: 38px;
+  }
 
-.datepicker--cell.-current-.-focus- {
-  color: #ffffff; }
+  .datepicker--buttons {
+    padding: 0;
+    padding-top: 30px;
+    padding-bottom: 8px;
+  }
 
-/*наведение мыши на ячейку*/
-.datepicker--cell.-range-to-,
-.datepicker--cell.-range-from- {
-  background: rgba(224, 209, 255, 0.5);
-  border: none;
-  border-radius: 0% 50% 50% 0%; 
-}
+  .datepicker--cell.-current-.-focus- {
+    color: #ffffff; }
 
-.datepicker--cell.-range-from- {
-  border: none;
-  border-radius: 50% 0% 0% 50%; 
-}
+  /*наведение мыши на ячейку*/
+  .datepicker--cell.-range-to-,
+  .datepicker--cell.-range-from- {
+    background: rgba(224, 209, 255, 0.5);
+    border: none;
+    border-radius: 0% 50% 50% 0%; 
+  }
 
-.datepicker--nav-title {
-  pointer-events: none;
-}
+  .datepicker--cell.-range-from- {
+    border: none;
+    border-radius: 50% 0% 0% 50%; 
+  }
 
-.datepicker--button-use {
-  cursor: pointer;
-  font-family: Montserrat, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: #BC9CFF;
-}
+  .datepicker--nav-title {
+    pointer-events: none;
+  }
 
-div[data-action="prev"] { 
-  margin-left: -10px;
-}
+  .datepicker--button-use {
+    cursor: pointer;
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #BC9CFF;
+  }
 
-div[data-action="next"] { 
-  margin-right: -8px;
-}
+  div[data-action="prev"] { 
+    margin-left: -10px;
+  }
+
+  div[data-action="next"] { 
+    margin-right: -8px;
+  }
