--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -1,15 +1,26 @@
-.dropdown { 
-	margin: 0 auto;
-	margin-top: 400px;
-	max-width: 266px;
-}
-
 
 .dropdown {
 
 	&__input-wrapper {
 		position: relative;
 		width: 100%;
+	}
+
+	&__label {
+		width: 100%;
+		position: relative;
+	}
+
+	&__label::before {
+		content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 10px;
+    bottom: -2px;
+    background: url('./images/sprite.png') no-repeat;
+    background-position: -2px -314px
 	}
 
 	&__input {
